leveldb-1.22/include/leveldb/c.h

/* Exported types */

typedef struct leveldb_t leveldb_t;
typedef struct leveldb_cache_t leveldb_cache_t;
typedef struct leveldb_comparator_t leveldb_comparator_t;
typedef struct leveldb_env_t leveldb_env_t;
typedef struct leveldb_filterpolicy_t leveldb_filterpolicy_t;
typedef struct leveldb_readoptions_t leveldb_readoptions_t;
typedef struct leveldb_snapshot_t leveldb_snapshot_t;
typedef struct leveldb_writebatch_t leveldb_writebatch_t;
typedef struct leveldb_writeoptions_t leveldb_writeoptions_t;
typedef uint32_t bool_t;
LEVELDB_EXPORT_C bool_t leveldb_get2(
                                leveldb_t* db, const leveldb_readoptions_t* options, const char* key,
                                size_t keylen, void (*get_callback)(const char* value, size_t vallen),
                                char** errptr);
LEVELDB_EXPORT_C void leveldb_writebatch_iterate(
    const leveldb_writebatch_t*, void* state,
    void (*put)(void*, const char* k, size_t klen, const char* v, size_t vlen),
    void (*deleted)(void*, const char* k, size_t klen));
/* Comparator */

LEVELDB_EXPORT_C leveldb_comparator_t* leveldb_comparator_create(
    void* state, void (*destructor)(void*),
    int (*compare)(void*, const char* a, size_t alen, const char* b,
                   size_t blen),
    const char* (*name)(void*));
/* Filter policy */

LEVELDB_EXPORT_C leveldb_filterpolicy_t* leveldb_filterpolicy_create(
    void* state, void (*destructor)(void*),
    char* (*create_filter)(void*, const char* const* key_array,
                           const size_t* key_length_array, int num_keys,
                           size_t* filter_length),
    unsigned char (*key_may_match)(void*, const char* key, size_t length,
                                   const char* filter, size_t filter_length),
    const char* (*name)(void*));
LEVELDB_EXPORT_C void leveldb_filterpolicy_destroy(leveldb_filterpolicy_t*);
LEVELDB_EXPORT_C leveldb_filterpolicy_t* leveldb_filterpolicy_create_bloom(
    int bits_per_key);
/* Read options */

LEVELDB_EXPORT_C leveldb_readoptions_t* leveldb_readoptions_create();
LEVELDB_EXPORT_C void leveldb_readoptions_destroy(leveldb_readoptions_t*);
LEVELDB_EXPORT_C void leveldb_readoptions_set_verify_checksums(
    leveldb_readoptions_t*, unsigned char);
LEVELDB_EXPORT_C void leveldb_readoptions_set_fill_cache(leveldb_readoptions_t*,
                                                       unsigned char);
LEVELDB_EXPORT_C void leveldb_readoptions_set_snapshot(leveldb_readoptions_t*,
                                                     const leveldb_snapshot_t*);
/* Write options */

LEVELDB_EXPORT_C leveldb_writeoptions_t* leveldb_writeoptions_create();
LEVELDB_EXPORT_C void leveldb_writeoptions_destroy(leveldb_writeoptions_t*);
LEVELDB_EXPORT_C void leveldb_writeoptions_set_sync(leveldb_writeoptions_t*,
                                                  unsigned char);
/* Cache */

LEVELDB_EXPORT_C leveldb_cache_t* leveldb_cache_create_lru(size_t capacity);
LEVELDB_EXPORT_C void leveldb_cache_destroy(leveldb_cache_t* cache);
/* Env */

LEVELDB_EXPORT_C leveldb_env_t* leveldb_create_default_env();
LEVELDB_EXPORT_C void leveldb_env_destroy(leveldb_env_t*);
/* If not NULL, the returned buffer must be released using leveldb_free(). */
LEVELDB_EXPORT_C char* leveldb_env_get_test_directory(leveldb_env_t*);
/* Utility */

/* Calls free(ptr).
   REQUIRES: ptr was malloc()-ed and returned by one of the routines
   in this file.  Note that in certain cases (typically on Windows), you
   may need to call this routine instead of free(ptr) to dispose of
   malloc()-ed memory returned by this library. */
LEVELDB_EXPORT_C void leveldb_free(void* ptr);
/* Return the major version number for this release. */
LEVELDB_EXPORT_C int leveldb_major_version();
/* Return the minor version number for this release. */
LEVELDB_EXPORT_C int leveldb_minor_version();