OnlyChain/Database/Native.cs


        [DllImport(Dll, EntryPoint = "leveldb_filterpolicy_create")]
        public static extern leveldb_filterpolicy_t* filterpolicy_create(void* state, leveldb_filterpolicy_create_destructor destructor, leveldb_filterpolicy_create_create_filter create_filter, leveldb_filterpolicy_create_key_may_match key_may_match, leveldb_filterpolicy_create_name name);

        [DllImport(Dll, EntryPoint = "leveldb_filterpolicy_destroy")]
        public static extern void filterpolicy_destroy(leveldb_filterpolicy_t* p0);

        [DllImport(Dll, EntryPoint = "leveldb_filterpolicy_create_bloom")]
        public static extern leveldb_filterpolicy_t* filterpolicy_create_bloom(int bits_per_key);

        [DllImport(Dll, EntryPoint = "leveldb_readoptions_create")]
        public static extern leveldb_readoptions_t* readoptions_create();

        [DllImport(Dll, EntryPoint = "leveldb_readoptions_destroy")]
        public static extern void readoptions_destroy(leveldb_readoptions_t* p0);

        [DllImport(Dll, EntryPoint = "leveldb_readoptions_set_verify_checksums")]
        public static extern void readoptions_set_verify_checksums(leveldb_readoptions_t* p0, bool p1);

        [DllImport(Dll, EntryPoint = "leveldb_readoptions_set_fill_cache")]
        public static extern void readoptions_set_fill_cache(leveldb_readoptions_t* p0, bool p1);

        [DllImport(Dll, EntryPoint = "leveldb_readoptions_set_snapshot")]
        public static extern void readoptions_set_snapshot(leveldb_readoptions_t* p0, leveldb_snapshot_t* p1);

        [DllImport(Dll, EntryPoint = "leveldb_writeoptions_create")]
        public static extern leveldb_writeoptions_t* writeoptions_create();

        [DllImport(Dll, EntryPoint = "leveldb_writeoptions_destroy")]
        public static extern void writeoptions_destroy(leveldb_writeoptions_t* p0);

        [DllImport(Dll, EntryPoint = "leveldb_writeoptions_set_sync")]
        public static extern void writeoptions_set_sync(leveldb_writeoptions_t* p0, bool p1);

        [DllImport(Dll, EntryPoint = "leveldb_cache_create_lru")]
        public static extern leveldb_cache_t* cache_create_lru(size_t capacity);

        [DllImport(Dll, EntryPoint = "leveldb_cache_destroy")]
        public static extern void cache_destroy(leveldb_cache_t* cache);

        [DllImport(Dll, EntryPoint = "leveldb_create_default_env")]
        public static extern leveldb_env_t* create_default_env();

        [DllImport(Dll, EntryPoint = "leveldb_env_destroy")]
        public static extern void env_destroy(leveldb_env_t* p0);

        [DllImport(Dll, EntryPoint = "leveldb_env_get_test_directory")]
        public static extern void* env_get_test_directory(leveldb_env_t* p0);

        [DllImport(Dll, EntryPoint = "leveldb_free")]
        public static extern void free(void* ptr);

        [DllImport(Dll, EntryPoint = "leveldb_major_version")]
        public static extern int major_version();

        [DllImport(Dll, EntryPoint = "leveldb_minor_version")]
        public static extern int minor_version();
    }
}

#pragma warning restore CA2101 // Specify marshaling for P/Invoke string arguments
#pragma warning restore CA1401 // P/Invokes should not be visible
#pragma warning restore CA1034 // Nested types should not be visible
#pragma warning restore IDE1006 // 命名样式